--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <meta content="壁なくわいわい喋れるDiscordサーバー！" name="description">
   <meta content="http://syeahaus.ml" property="og:url">
   <meta content="" property="og:description">
-  <meta content="http://syeahaus.ml/img/favicon.jpeg" property="og:image">
+  <meta content="https://syeahaus.ml/img/favicon.jpeg" property="og:image">
   <meta content="summary" name="twitter:card">
   <meta content="シェアハウス" name="twitter:title">
   <meta content="壁なくわいわい喋れるDiscordサーバー！" name="twitter:description">
-  <meta content="http://syeahaus.ml/img/favicon.jpeg" name="twitter:image">
+  <meta content="https://syeahaus.ml/img/favicon.jpeg" name="twitter:image">
   <!-- Site Resources -->
-  <link rel="shortcut icon" href="img/favicon.png">
+  <link rel="shortcut icon" href="https://syeahaus.ml/img/favicon.jpeg">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -46,7 +46,7 @@
             </a>
           </p>
           <p class="control">
-            <a class="button is-normal is-rounded is-dark" href="https://twitter.com/nevion_discord/">
+            <a class="button is-normal is-rounded is-dark" href="https://twitter.com/syeahaus/">
               <span class="icon is-small">
                 <i class="fab fa-twitter"></i>
               </span>
