fix: server name

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <!-- Metadata -->
   <meta content="壁なくわいわい喋れるDiscordサーバー！" name="description">
   <meta content="http://syeahaus.ml" property="og:url">
-  <meta content="" property="og:description">
+  <meta content="しぇあはうす" property="og:description">
   <meta content="https://syeahaus.ml/img/favicon.jpeg" property="og:image">
   <meta content="summary" name="twitter:card">
-  <meta content="シェアハウス" name="twitter:title">
+  <meta content="しぇあはうす" name="twitter:title">
   <meta content="壁なくわいわい喋れるDiscordサーバー！" name="twitter:description">
   <meta content="https://syeahaus.ml/img/favicon.jpeg" name="twitter:image">
   <!-- Site Resources -->
