--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
           </div>
           <div class="column">
-            <img src="img/staff/rei.jpg" class="staff ceo" alt="れいさん">
+            <img src="img/staff/rei.jpeg" class="staff ceo" alt="れいさん">
             <p>怜_ (Crazy_Rei£_#9182)</p>
             <div class="tag is-ceo is-rounded">
               <p>管理者</p>
